--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,10 @@ html {
   scroll-behavior: smooth;
 }
 
+html {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
